--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ PyYAML>=5.4.1 # MIT
 immutables>=0.16 # Apache-2.0
 alembic>=1.7.5 # MIT
 httpx>=0.16.1 # BSD License (3 clause)
-SQLAlchemy>=1.3.24 # MIT
+SQLAlchemy==1.3.22
 PyMySQL>=0.9.3 # MIT
 dnspython>=2.1.0 # ISC
 click>=7.1.2 # BSD License (3 clause)
