Rebase our skyline-apiserver repo with stable/2025.1

--- a/etc/skyline.yaml.sample
+++ b/etc/skyline.yaml.sample
@@ -32,7 +32,6 @@ openstack:
   reclaim_instance_interval: 604800
   service_mapping:
     baremetal: ironic
-    block-storage: cinder
     compute: nova
     container: zun
     container-infra: magnum
@@ -48,6 +47,7 @@ openstack:
     orchestration: heat
     placement: placement
     sharev2: manilav2
+    volumev3: cinder
   sso_enabled: false
   sso_protocols:
   - openid
